# fixed-income-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
macro_quant/: main.py  portfolio.json
macro_quant/analytics/: charts.py  fixed_income.py  risk.py
macro_quant/data/: base.py  fred.py  yahoo.py
macro_quant/mcp_server/: server.py
macro_quant/models/: alerts.py  instruments.py  portfolio.py  yield_curve.py
macro_quant/tests/: test_fixed_income.py  test_portfolio.py  test_risk.py
